--- a/boxes.html
+++ b/boxes.html
@@ -23,9 +23,10 @@
 		padding: 100px;
 	}
 	#t{
-		margin: 10px;
+		margin: 10px 0px 10px 0px;
+
 		border: 1px solid blue;
-		width: 50%;
+		width: 70%;
 		height: 100px;
 		/*padding: 40px;*/
 	}
@@ -44,19 +45,26 @@
 		border:1px solid blue;
 	}
 	#left{
-		margin-left: 10%;
+		/*margin-left: 10%;*/
 		width: 80%;
 	}
 	#main{
-		margin: 10px 10% 70px 10%;
+		margin: 10px 10% 10px 10%;
 	}
 	/*#right{
 		width: 25%;
 		align-content: right;
 	}*/
 	#lt{
+		/*margin-left: 10px;*/
+		width: 30%;
+		border: 1px solid blue;
+		height: 100px;
+		float: left;
+	}
+	#rt{
 		margin-left: 10px;
-		width: 23.4%;
+		width: 30.5%;
 		border: 1px solid blue;
 		height: 100px;
 		float: left;
@@ -89,7 +97,7 @@
 			<div id="t"></div>		
 			<div id="t"></div>
 			<div id="lt"></div>
-			<div id="lt"></div>
+			<div id="rt"></div>
 		</div>
 
 	</div>		
