Adjust Box Dimension

--- a/boxes.html
+++ b/boxes.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Task1</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style type="text/css">
 
@@ -24,7 +24,6 @@
 	}
 	#t{
 		margin: 10px 0px 10px 0px;
-
 		border: 1px solid blue;
 		width: 70%;
 		height: 100px;
@@ -57,14 +56,14 @@
 	}*/
 	#lt{
 		/*margin-left: 10px;*/
-		width: 30%;
+		width: 29%;
 		border: 1px solid blue;
 		height: 100px;
 		float: left;
 	}
 	#rt{
 		margin-left: 10px;
-		width: 30.5%;
+		width: 29%;
 		border: 1px solid blue;
 		height: 100px;
 		float: left;
@@ -94,13 +93,13 @@
 		</div>
 		
 		<div id="left">
-			<div id="t"></div>		
+			<div id="t"></div>
 			<div id="t"></div>
 			<div id="lt"></div>
 			<div id="rt"></div>
 		</div>
 
-	</div>		
+	</div>
 		
 <!--</div>-->
 <!--<div class="col-6">
