Add new div bottombox

--- a/boxes.html
+++ b/boxes.html
@@ -56,14 +56,14 @@
 	}*/
 	#lt{
 		/*margin-left: 10px;*/
-		width: 29%;
+		width: 38.221%;
 		border: 1px solid blue;
 		height: 100px;
 		float: left;
 	}
 	#rt{
 		margin-left: 10px;
-		width: 29%;
+		width: 40%;
 		border: 1px solid blue;
 		height: 100px;
 		float: left;
@@ -80,6 +80,10 @@
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+#bottomboxes{
+	height: 100px;
+	width: 70%;
+}
 </style>
 <body>
 
@@ -95,8 +99,10 @@
 		<div id="left">
 			<div id="t"></div>
 			<div id="t"></div>
+			<div id="bottomboxes">
 			<div id="lt"></div>
 			<div id="rt"></div>
+		</div>
 		</div>
 
 	</div>
