--- a/dummyform.html
+++ b/dummyform.html
@@ -7,24 +7,28 @@
 	<style type="text/css">
 		#Form{
 			width: 80%;
-			margin: 10px 10% 0px 10%;
-			background-color: rgb(0,20,20);
+			margin: 0px 10% 0px 10%;
+			background-color: rgb(0,20,35);
 		}
 		#h1{
-			margin: 20px 7% 20px 7%;
+			margin: 0px 7% 20px 7%;
+			height: 30px;
 		}
 		#h11{
-			background-color: rgb(0,255,180);
-			width: 44%;
-			padding: 25px;
+			margin-top: 50px;
+			background-color: rgb(0,256,160);
+			width: 42%;
+			padding: 4%;
 			float: left;
 			text-align: center;
 			color: white;
+			font-weight: bold;
 		}
 		#h12{
+			margin-top: 50px;
 			background-color: grey;
-			width: 44%;
-			padding: 25px;
+			width: 42%;
+			padding: 4%;
 			float: left;
 			text-align: center;
 			color: rgb(180,180,180);
@@ -33,61 +37,70 @@
 		{
 			width: 38%;
 			border-color: rgb(160,160,160);
-			padding: 10px;
+			padding: 2%;
 			color: grey;
 			float: left;
 			margin-left: 7%;
-			background-color: rgb(0,20,20);
+			background-color: rgb(0,20,35);
 		}
 		input[type="email"]
 		{
-			margin: 30px 7% 10px 7%;
+			margin: 30px 9% 10px 7%;
 			border-color: rgb(180,180,180);
-			padding: 10px;
+			padding: 2%;
 			width: 85.7%;
-			background-color: rgb(0,20,20);
+			background-color: rgb(0,20,35);
 			color: rgb(180,180,180);
 		}
 		input[type="password"]
 		{
-			margin: 30px 7% 10px 7%;
+			margin: 30px 9% 10px 7%;
 			border-color: rgb(180,180,180);
-			padding: 10px;
+			padding: 2%;
 			width: 85.6%;
-			background-color: rgb(0,20,20);
+			background-color: rgb(0,20,35);
 			color: rgb(180,180,180);
 		}
 		input[type="button"]
 		{
 			margin: 30px 7% 30px 7%;
-			background-color: rgb(0,254,180);
-			padding: 30px;
-			width: 85.6%;
+			background-color: rgb(0,256,150);
+			padding: 3%;
+			width: 88%;
 			color: white;
 			font-size: 26px;
 			font-weight: bold;
 		}
+		#n{
+			height: 2%;
+		}
 		#tmp{
 			width: 50px;
+		}
+		#main{
+			margin: 30px 9% 10px 7%;
 		}
 	</style>
 </head>
 <body>
 	<div id="Form">
+		<div id="main">
 		<div id="h1">
 			<p id="h11">Sign Up</p>
 			<p id="h12">Log In</p>
 		</div><br>
-		<div id="tmp">xyz</div>
+		<div id="tmp">.</div>
 		
 		<h1 style="text-align: center;color: white;">Sign Up for Free</h1><br><br>
 		<div>
+			<div id="n">
 			<input type="text" name="fn" placeholder="First Name">
-			<input type="text" name="ln" placeholder="Last Name"><br><br>
-			<input type="email" name="em" placeholder="Email Address"><br>
-			<input type="password" name="pass" placeholder="Set A Password"><br>
+			<input type="text" name="ln" placeholder="Last Name"><br><br></div>
+			<input type="email" name="em" placeholder="Email Address"><br><br>
+			<input type="password" name="pass" placeholder="Set A Password"><br><br>
 			<input type="button" name="butn" value="GET STARTED">
 		</div>
+	</div>
 	</div>
 </body>
 </html>
