--- a/dummyform.html
+++ b/dummyform.html
@@ -16,7 +16,7 @@
 		}
 		#h11{
 			margin-top: 50px;
-			background-color: rgb(0,256,160);
+			background-color: #66cdaa/*rgb(100,256,190)*/;
 			width: 42%;
 			padding: 4%;
 			float: left;
@@ -39,7 +39,7 @@
 			border-color: rgb(160,160,160);
 			padding: 2%;
 			color: grey;
-			float: left;
+			/*float: left;*/
 			margin-left: 7%;
 			background-color: rgb(0,20,35);
 		}
@@ -64,7 +64,7 @@
 		input[type="button"]
 		{
 			margin: 30px 7% 30px 7%;
-			background-color: rgb(0,256,150);
+			background-color: #66cdaa/*rgb(0,256,150)*/;
 			padding: 3%;
 			width: 88%;
 			color: white;
