--- a/dummyform.html
+++ b/dummyform.html
@@ -65,7 +65,7 @@
 		{
 			margin: 30px 7% 30px 7%;
 			background-color: #66cdaa/*rgb(0,256,150)*/;
-			padding: 3%;
+			padding: 2%;
 			width: 88%;
 			color: white;
 			font-size: 26px;
@@ -73,6 +73,7 @@
 		}
 		#n{
 			height: 2%;
+			width: 100%;
 		}
 		#tmp{
 			width: 50px;
